Add method for get favourite tenders
